--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Hycon Public Blockchain */
 /* BASE OVERRIDES */
 
 /* Add buffer for nicer anchor links */
@@ -63,6 +64,8 @@ body pre {
 .fill-dark2 .rounded-toggle .active { background-color: #313131; }
 .space-top3 { margin-top: 30px;}
 .space-top5 { margin-top: 50px;}
+
+.space-top10 { margin-top: 100px;}
 .line-height15 { line-height: 15px; }
 .pad00y { padding-top: 2px; padding-bottom: 2px; }
 .space-bottom00 { margin-bottom: 3px;}
