Adjustments to stylesheet and updating index html sample

--- a/css/base.css
+++ b/css/base.css
@@ -118,7 +118,7 @@ p:last-child { margin-bottom:0; }
 small,
 .prose.small,
 .small {
-  font-size:0.875rem;
+  font-size:12px;
   line-height:20px;
   letter-spacing:0;
   }
